--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -129,6 +129,9 @@
 @import "__eShopTovarSlider.css";
 @import "__eShopTovarSlider_media.css";
 
+@import "__tovarSimilarCaroucel.css";
+@import "__tovarSimilarCaroucel_media.css";
+
 @import "__pagination.css";
 @import "__pagination_media.css";
 
