--- a/src/__eShopTovarPage.pug
+++ b/src/__eShopTovarPage.pug
@@ -2,8 +2,7 @@ mixin eShopTovar
   .eShopTovar__area 
     .eShopTovar.clearfix
       .eShopTovar__sliderArea
-        //- +eShopTovarSlider
-        +slider
+        +eShopTovarSlider
       .eShopTovar__titleArea 
         .eShopTovar__art 
           span Артикул:
@@ -35,9 +34,8 @@ mixin eShopTovar
               td Страна-производитель
               td Испания
         .eShopTovar__priceArea
-          .eShopTovar__oldPriceArea
-            .eShopTovar__oldPrice 2 170 ₽
-            .eShopTovar__discount 20%
+          .eShopTovar__oldPrice 2 170 ₽
+          .eShopTovar__discount 20%
           .eShopTovar__price 1 736 ₽
         .eShopTovar__btnsArea 
           .eShopTovar__addToCartBtn Добавить в корзину
@@ -51,27 +49,7 @@ mixin eShopTovar
             p Шампунь с гиалуроновой кислотой подходит для мелированных и осветленных волос. Формула обеспечивает интенсивное очищение, смягчает и увлажняет волосы от корней до самых кончиков. очищает волосы от загрязнений и эффективно удаляет микрочастицы пыли, которые делают волосы тусклыми и безжизненными.
 
 
-mixin eShopTovarSlider
-  .eShopTovarSlider1__area.eShopTovarSlider1_swiperSlider
-    .eShopTovarSlider1
-      .eShopTovarSlider1__image.swiper-container
-        .swiper-wrapper
-          each item in eCatalogBase
-            .eShopTovarSlider1__imgItem.swiper-slide
-              a(href='assets/img/tovar3/Bluza-5100/Bluza-5100-1.JPG', data-fancybox='group1', data-caption='001', style='background-image: url(' + item.img + ');')
-        .eShopTovarSlider1__pagination
-      .eShopTovarSlider1__thumbs.swiper-container
-        .eShopTovarSlider1__Prev
-          i.icon-arr-left1
-        .swiper-wrapper
-          each item in eCatalogBase
-            .eShopTovarSlider1__minItem.swiper-slide
-              img(src=item.img, alt="")
-        .eShopTovarSlider1__Next
-          i.icon-arr-right1
-
-
-mixin slider 
+mixin eShopTovarSlider 
   .eShopTovarSlider.clearfix
     .swiper-container.eShopTovarSlider__container_image
       .swiper-wrapper.eShopTovarSlider__wrapper_image 
@@ -93,3 +71,96 @@ mixin slider
       .swiper-button-next.eShopTovarSlider__next
         i.icon-down3
           
+mixin catalogSlider 
+  .catalogSlider__area 
+    .catalogSlider__outer 
+      .catalogSlider
+
+
+mixin tovarSimilarCaroucel
+  .tovarSimilarCaroucel__area
+    .tovarSimilarCaroucel__outer
+      .tovarSimilarCaroucel__title
+        h2 С этим товаром покупают
+      .tovarSimilarCaroucel
+        .swiper-container.tsc1-container
+          .swiper-wrapper.tsc1-wrapper
+            each item in caroucel1
+              .swiper-slide.tsc1-slide
+                .eCatalog__itemArea_inSlider(id=item.id)
+                  a.eCatalog__item_inSlider(href="")
+                    .eCatalog__itemFav
+                      i.icon-favorit1.iconNoFav
+                      i.icon-favorit2.iconInFav
+                    .eCatalog__itemImgOuter 
+                      .eCatalog__itemImg(style='background-image: url(' + item.img + ');')
+                    .eCatalog__itemInfo_inSlider 
+                      .eCatalog__itemTitle!= item.title 
+                      .eCatalog__itemDesc!= item.content 
+                      .eCatalog__itemPrice
+                        span!= item.price 
+                        span ₽
+        .tsc1__left.tovarSimilarCaroucel__left
+          i.icon-arr-left1
+        .tsc1__right.tovarSimilarCaroucel__right
+          i.icon-arr-right1
+        .swiper-pagination.tsc__pagination.tsc1__pagination
+
+
+mixin tovarSimilarCaroucel2
+  .tovarSimilarCaroucel__area
+    .tovarSimilarCaroucel__outer
+      .tovarSimilarCaroucel__title
+        h2 Похожие товары
+      .tovarSimilarCaroucel
+        .swiper-container.tsc2-container
+          .swiper-wrapper.tsc2-wrapper
+            each item in caroucel2
+              .swiper-slide.tsc2-slide
+                .eCatalog__itemArea_inSlider(id=item.id)
+                  a.eCatalog__item_inSlider(href="")
+                    .eCatalog__itemFav
+                      i.icon-favorit1.iconNoFav
+                      i.icon-favorit2.iconInFav
+                    .eCatalog__itemImgOuter 
+                      .eCatalog__itemImg(style='background-image: url(' + item.img + ');')
+                    .eCatalog__itemInfo_inSlider 
+                      .eCatalog__itemTitle!= item.title 
+                      .eCatalog__itemDesc!= item.content 
+                      .eCatalog__itemPrice
+                        span!= item.price 
+                        span ₽
+        .tsc2__left.tovarSimilarCaroucel__left
+          i.icon-arr-left1
+        .tsc2__right.tovarSimilarCaroucel__right
+          i.icon-arr-right1
+        .swiper-pagination.tsc__pagination.tsc2__pagination
+
+mixin advantage
+  .advantage__area
+    .advantage__outer
+      .advantage
+        .advantage__itemOuter 
+          .advantage__item
+            .advantage__itemImg 
+              img(src="assets/img/adv/call-center-agent.svg", alt="")
+            .advantage__itemTitle Помощь
+            a.advantage__itemLink(href="") Частые вопросы
+        .advantage__itemOuter 
+          .advantage__item
+            .advantage__itemImg 
+              img(src="assets/img/adv/drone.svg", alt="")
+            .advantage__itemTitle Доставим
+            a.advantage__itemLink(href="") Условия бесплатной доставки
+        .advantage__itemOuter 
+          .advantage__item
+            .advantage__itemImg 
+              img(src="assets/img/adv/money.svg", alt="")
+            .advantage__itemTitle Оплата
+            a.advantage__itemLink(href="") Способы оплаты
+        .advantage__itemOuter 
+          .advantage__item
+            .advantage__itemImg 
+              img(src="assets/img/adv/return-box.svg", alt="")
+            .advantage__itemTitle Возврат
+            a.advantage__itemLink(href="") Что делать?
