--- a/src/eShopTovarPage.pug
+++ b/src/eShopTovarPage.pug
@@ -31,6 +31,11 @@ body
     +breadcrumbs3
  
     +eShopTovar
+
+    +tovarSimilarCaroucel
+    +tovarSimilarCaroucel2
+
+    +advantage
    
     //- +zBlock3
 
