--- a/src/__eFilterMobile.pug
+++ b/src/__eFilterMobile.pug
@@ -9,8 +9,9 @@ mixin eFilerMobile
         .eFilerMobile__content
           .eFilerMobile__item 
             .eFilerMobile__itemLev1
-              span Для кого
-              i.icon-arr-right1
+              .eFilerMobile__itemLev1__inner
+                span Для кого
+                i.icon-arr-right1
             .eFilerMobile__itemLev2
               .eFilerMobile__back2
                 i.icon-arrow-left2
@@ -24,8 +25,9 @@ mixin eFilerMobile
                   label(for="2-mb") Для мужчин
           .eFilerMobile__item 
             .eFilerMobile__itemLev1
-              span Зона применения
-              i.icon-arr-right1
+              .eFilerMobile__itemLev1__inner
+                span Зона применения
+                i.icon-arr-right1
             .eFilerMobile__itemLev2
               .eFilerMobile__back2
                 i.icon-arrow-left2
@@ -81,8 +83,9 @@ mixin eFilerMobile
                   label(for="216-mb") Шея
           .eFilerMobile__item 
             .eFilerMobile__itemLev1
-              span Действие
-              i.icon-arr-right1
+              .eFilerMobile__itemLev1__inner
+                span Действие
+                i.icon-arr-right1
             .eFilerMobile__itemLev2
               .eFilerMobile__back2
                 i.icon-arrow-left2
