--- a/src/assets/css/__eFilterMobile.css
+++ b/src/assets/css/__eFilterMobile.css
@@ -71,8 +71,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 20px;
+  padding: 10px 20px 0 20px;
   color: #4f4f4f;
+  position: relative;
+}
+
+.eFilerMobile__itemLev1__inner {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 0 10px 0;
+  border-bottom: 1px solid #f2f2f2;
 }
 
 .eFilerMobile__itemLev1 span {
@@ -94,6 +104,15 @@
   display: flex;
   flex-direction: column;
   display: none;
+}
+
+.eFilerMobile__itemLev2__inner {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 0 10px 0;
+  border-bottom: 1px solid #f2f2f2;
 }
 
 .eFilerMobile__back2 {
@@ -118,6 +137,7 @@
 
 .eFilerMobile__itemElement {
   padding: 20px;
+  width: 100%;
 }
 
 .eFilerMobile__itemElement_scroll {
