--- a/src/eShopCatalog.pug
+++ b/src/eShopCatalog.pug
@@ -1,4 +1,4 @@
-- var pageTitle = 'Процедуры'
+- var pageTitle = 'Каталог товаров'
 - var seoKeywords = 'Ключевые слова для страницы'
 - var seoDesc = 'Сео описание для страницы'
 
