--- a/src/__eShopTovarPage.pug
+++ b/src/__eShopTovarPage.pug
@@ -90,8 +90,8 @@ mixin tovarSimilarCaroucel
                 .eCatalog__itemArea_inSlider(id=item.id)
                   a.eCatalog__item_inSlider(href="")
                     .eCatalog__itemFav
-                      i.icon-favorit1.iconNoFav
-                      i.icon-favorit2.iconInFav
+                      i.icon-eheart1.iconNoFav
+                      i.icon-eheart1.iconInFav
                     .eCatalog__itemImgOuter 
                       .eCatalog__itemImg(style='background-image: url(' + item.img + ');')
                     .eCatalog__itemInfo_inSlider 
