--- a/src/__pagination.pug
+++ b/src/__pagination.pug
@@ -3,7 +3,7 @@ mixin pagiantion
     .pag__outer
       .pag
         a.pag__item(href="#") 
-          i.icon-left-end-arrow2
+          i.icon-left-end-arrow
         a.pag__item(href="#")
           i.icon-arr-left1
         a.pag__item(href="#") ...
@@ -14,4 +14,4 @@ mixin pagiantion
         a.pag__item(href="#")
           i.icon-arr-right1
         a.pag__item(href="#") 
-          i.icon-right-end-arrow2
+          i.icon-right-end-arrow
