--- a/src/__header3.pug
+++ b/src/__header3.pug
@@ -10,7 +10,7 @@ mixin header3
         a.topLine3__sLinkItem(href="#")
           i.icon-instagram2
         a.topLine3__sLinkItem(href="#")
-          i.icon-youtube
+          i.icon-youtube3
         a.topLine3__sLinkItem.topSearch_JS(href="#")
           i.icon-search2
       .topLine3__menu 
@@ -67,7 +67,7 @@ mixin header3
       .eShop__headerIcon
         a.eShop__headerFav(href="")
           i.icon-eheart1.hederIconNoFav
-          i.icon-like2fill.hederIconInFav
+          i.icon-eheart1.hederIconInFav
         a.header__cart(href="")
           i.icon-shopping-cart
           span 12
