--- a/src/assets/css/__eShopCatalog.css
+++ b/src/assets/css/__eShopCatalog.css
@@ -11,6 +11,20 @@
   flex-wrap: wrap;
 }
 
+.split_top {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.split__wide {
+  margin: 0 -10px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .split__left {
   width: 23%;
 }
@@ -57,7 +71,8 @@
 }
 
 .eCatalog__item:hover {
-  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3);
+  /* box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3); */
+  box-shadow: 0px 10px 20px rgba(196, 187, 234, 0.45);
 }
 
 .eCatalog__itemImgOuter {
@@ -149,6 +164,8 @@
   margin-bottom: 30px;
   position: relative;
   background: #fff;
+  width: 23%;
+  padding: 0;
 }
 
 .eBrands__overlay {
@@ -298,6 +315,11 @@
   color: var(--orange);
 } /********************/
 
+.eGreyLine__outer {
+  padding: 0 0 0 30px;
+  width: 77%;
+}
+
 .eGreyLine {
   background: #f2f2f2;
   border: 1px solid #e0e0e0;
@@ -315,9 +337,19 @@
   padding: 0 15px;
 }
 
+.eGreyLine__mbBtnsOuter {
+  width: 66.666%;
+  padding: 0 5px 0 0;
+}
+
 .eGreyLine__mbBtns {
   display: none;
   justify-content: space-between;
+}
+
+.eGreyLine__mbBtnSortOuter {
+  padding: 0;
+  display: none;
 }
 
 .eGreyLine__mbBtnSort {
@@ -336,6 +368,11 @@
   cursor: pointer;
   transition: all 0.3s;
   position: relative;
+}
+
+.eGreyLine__mbBtnFiltrOuter {
+  padding: 0;
+  display: none;
 }
 
 .eGreyLine__mbBtnFiltr {
