--- a/src/eShopCatalog.pug
+++ b/src/eShopCatalog.pug
@@ -39,22 +39,23 @@ body
     +breadcrumbs3
 
     .split__area
-      .split 
-        .split__left_top
-          .eBrands__area
-            .eBrands__overlay 
-            .eBrands__btn Бренды
-            .eBrands__content
-              .eBrands__contentInner.eBrands__contentInner_scroll
-                +brands
+      .split_top
+        //- .split__wide
+        .eBrands__area
+          .eBrands__overlay 
+          .eBrands__btn Бренды
+          .eBrands__content
+            .eBrands__contentInner.eBrands__contentInner_scroll
+              +brands
 
-        .split__right_top
-          .eGreyLine__mbBtns 
-            .eGreyLine__mbBtnSort
-              span Сортировать по
-            .eGreyLine__mbBtnFiltr
-              span Фильтры
-              i.icon-filter
+        .eGreyLine__mbBtnSortOuter
+          .eGreyLine__mbBtnSort
+            span Сортировать по
+        .eGreyLine__mbBtnFiltrOuter
+          .eGreyLine__mbBtnFiltr
+            span Фильтры
+            i.icon-filter
+        .eGreyLine__outer
           .eGreyLine
             .eSort__areaWrapper
               .eSort__areaOuter
@@ -100,7 +101,7 @@ body
   +menuBottom1_page
 
   //- далее вывод не на главной
-  +hideBox
+  +hideBox2
 
   +eFilerMobile
 
