--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -132,6 +132,9 @@
 @import "__tovarSimilarCaroucel.css";
 @import "__tovarSimilarCaroucel_media.css";
 
+@import "__eShopCartPage.css";
+@import "__eShopCartPage_media.css";
+
 @import "__pagination.css";
 @import "__pagination_media.css";
 
