--- a/src/assets/css/typorraphy.css
+++ b/src/assets/css/typorraphy.css
@@ -104,8 +104,8 @@ strong {
   content: "";
   position: absolute;
   left: 0;
-  top: 50%;
-  margin-top: -7px;
+  top: 2px;
+  /* margin-top: -7px; */
   width: 14px;
   height: 14px;
   border: 1px solid #828282;
