--- a/src/assets/css/__eShopCatalog.css
+++ b/src/assets/css/__eShopCatalog.css
@@ -59,6 +59,11 @@
   padding: 15px;
   width: 33.333%;
 }
+
+.eCatalog__itemAreaInWide {
+  width: 25%;
+}
+
 .eCatalog__item {
   display: flex;
   flex-direction: column;
