--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -55,6 +55,9 @@
 @import "__procedure3.css";
 @import "__procedure3_media.css";
 
+@import "__procedure4.css";
+@import "__procedure4_media.css";
+
 @import "__masters.css";
 @import "__masters_media.css";
 
