--- a/src/assets/css/__procedure3.css
+++ b/src/assets/css/__procedure3.css
@@ -331,16 +331,17 @@
   padding: 0.625rem 1.875rem;
   text-decoration: none;
   width: 100%;
-  font-size: 1rem;
+  font-size: 14px;
+  font-weight: 600;
   line-height: 1.3;
-  color: var(--dark);
-  border: 1px solid #e0e0e0;
+  color: var(--brick);
+  /* border: 1px solid #e0e0e0; */
+  border: 2px solid var(--brick);
   transition: all 0.3s;
   border-radius: 25px;
 }
 .procedure3__master:hover {
   background: var(--brick);
-  border: 1px solid var(--brick);
   color: #fff;
 }
 
