--- a/src/procedure4_image.pug
+++ b/src/procedure4_image.pug
@@ -19,8 +19,6 @@ include __footer
 include __menuBottom1
 
 
-include __eShopTovarPage
-
 
 
 
@@ -68,7 +66,7 @@ body
         //-     h3 Фото
         //-   +gallery
 
-        +tovarSimilarCaroucel
+
 
         .price3__area#priceAnchor
           .title3
@@ -113,9 +111,18 @@ body
                 tr
                   td Крылья носа!
                   td 2000 руб.
-          .outerLink3__area
-            a.outerLink3(href="#", target="_blank", rel="nofollow") Купить
+          //- .outerLink3__area
+          //-   a.outerLink3(href="#", target="_blank", rel="nofollow") Купить
+          //-   span Все для домашнего ухода Вы можете приобрести в нашем <strong>Бьюти-бутике.</strong>
+
+          .outerLink4__area
+            a.outerLink4(href="#", target="_blank", rel="nofollow")
+              i.icon-eshopping-cart
+              span Перейти к товару
             span Все для домашнего ухода Вы можете приобрести в нашем <strong>Бьюти-бутике.</strong>
+        
+        +ProcedureImageGallery
+        
         .card3__area
           .card3__outer
             .title3
