--- a/src/__footer.pug
+++ b/src/__footer.pug
@@ -65,7 +65,7 @@ mixin footer3
     footer.footer3.w1
       .footer3a 
         .footer3__logo
-          img(src="assets/img/logo-1.svg", alt="")
+          img(src="assets/img/logo-1-fff.svg", alt="")
         .footer3__tm Центр косметологии "Бьюти Лаунж" © Саратов, 2021
         .footer3__soc
           .footer__linksTitle Следите за нами в соцсетях
