--- a/src/__header3.pug
+++ b/src/__header3.pug
@@ -9,10 +9,10 @@ mixin header3
       .topLine3__sLinks
         a.topLine3__sLinkItem(href="#")
           i.icon-instagram2
-        a.topLine3__sLinkItem(href="#")
-          i.icon-youtube3
-        a.topLine3__sLinkItem.topSearch_JS(href="#")
-          i.icon-search2
+        //- a.topLine3__sLinkItem(href="#")
+        //-   i.icon-youtube3
+        //- a.topLine3__sLinkItem.topSearch_JS(href="#")
+        //-   i.icon-search2
       .topLine3__menu 
         ul.topLineMenu 
           li
@@ -59,12 +59,14 @@ mixin header3
         li
           a(href="#") E-shop
       a.header3__contItem(href="tel:+78452260000") 
-        i.icon-phone-call
+        //- i.icon-phone-call
         .header3__contItemInfo 
-          span Центр косметологии:
+          //- span Центр косметологии:
           span +7 (8452) 26-00-00
       
       .eShop__headerIcon
+        a.eShop__headerFav.topSearch_JS(href="")
+          i.icon-search2
         a.eShop__headerFav(href="")
           i.icon-eheart1.hederIconNoFav
           i.icon-eheart1.hederIconInFav
