--- a/src/assets/css/__footer3.css
+++ b/src/assets/css/__footer3.css
@@ -159,7 +159,7 @@
   text-decoration: none;
   font-size: 0.875rem;
   line-height: 1.125rem;
-  color: var(--dark);
+  color: #fff;
   margin: 0;
 }
 
