--- a/src/assets/css/__procedure3.css
+++ b/src/assets/css/__procedure3.css
@@ -319,7 +319,7 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  margin: 0 -5px;
+  margin: 20px -5px 0;
 }
 
 .procedure3__masterOuter {
