--- a/src/assets/css/__procedure3_media.css
+++ b/src/assets/css/__procedure3_media.css
@@ -174,7 +174,14 @@
     width: 100%;
   }
   .priceBox3 table td {
-    font-size: 11px;
+    font-size: 13px;
+  }
+  .priceBox3 table td:nth-child(1) {
+    width: 60%;
+  }
+
+  .priceBox3 table td:nth-child(2) {
+    width: 40%;
   }
 }
 
